--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,25 +1,87 @@
+@import url('https://fonts.cdnfonts.com/css/avenir-next-lt-pro');
+
 body{
     margin: 0px;
     padding: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-header{
+
+#header{
+    background-image: url("../img/backgrounds/bg-header.png");
     color: white;
+}
+
+#header-title h3, h6{
+    display: inline;
+}
+
+#navbarTogglerDemo03 .active{
+    color: #bd931f;
+}
+
+#navbarTogglerDemo03 .nav-link:hover{
+    color: #bd931f;
+}
+
+#widget-fecha{
+    border: 0px;
+    color: white;
+    background-color: rgba(0, 0, 0, 0.5);
+    max-width: 20rem;
+}
+
+#icon-clima{
+    width: 80px;
+    height: 80px;
+    position: absolute;
+    top: -15px;
+    left: 35px;
+}
+
+#temperatura{
+    font: normal 600 25px 'Avenir Next LT Pro', sans-serif;
+    margin-bottom: 0px;
+    position: absolute;
+    top: 50px;
+}
+
+#widget-fecha .card-title{
+    font: normal 600 32px 'Avenir Next LT Pro', sans-serif;
+}
+
+#widget-fecha .card-text{
+    font-size: 13px;
+}
+
+#bg-img-page{
+    border: 0px;
 }
 
 #contenidos{
     margin: 80px auto;
     padding: 0;
 }
-.card{
+#contenidos .card{
     padding: auto;
+    width: 20rem;
 }
 
-.card-img-top{
-    width: 320px;
-    height: 260px;
+#contenidos .card-img-top{
+    width: 318px;
+    height: 368px;
 }
 
+#contenidos .card-text{
+    font-size: 14px;
+}
+
+
+
+.img-gallery{
+    width: 400px;
+    height: 400px;
+}
 
 .footer{
     padding: 50px 0 30px 0;
@@ -31,10 +93,18 @@ header{
     border: 1px solid white;
 }
 .footer button:hover{
-    border: 1px solid rgba(244, 255, 93, 0.801);
-    color: rgba(244, 255, 93, 0.801);
+    border: 1px solid #d4b341;
+    color: #d4b341;
 }
 
-.footer a{
-    color: aqua;
+.footer .quick-info a{
+    color: #d4b341;
+}
+
+#footer-nav .nav-link{
+    color: white;
+}
+
+#footer-nav .nav-link:hover{
+    color: #d4b341;
 }
